# yc-k8s-zonal

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tasks.py
infra/: main.tf  provider.tf  terraform.tfvars.example  variables.tf
infra/modules/iam/: main.tf  outputs.tf  provider.tf  variables.tf
infra/modules/k8s-cluster/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
