[tool.poetry]
name = "yc-k8s-zonal"
version = "0.1.0"
description = ""
authors = ["NickOsipov <nick.osipov.91@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.11"
invoke = "2.2.0"
python-dotenv = "1.0.1"
requests = "2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
